--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -19,7 +19,7 @@ BODY STYLING
 
 * {
   margin: 0;
-  padding: 0;
+  padding: 50;
   border: none;
   outline: none;
 }
@@ -31,6 +31,7 @@ body {
   text-align: left;
   text-decoration: none;
   height: 500px;
+
 }
 
 #wrapper {
@@ -40,31 +41,6 @@ body {
   margin: 70px auto;
 }
 
-/* Download Button (Demo Only) */
-.download {
-  display: block;
-  position: absolute;
-  float: right;
-  right: 25px;
-  bottom: 25px;
-  padding: 5px;
-
-  font-weight: bold;
-  font-size: 11px;
-  text-align: right;
-  text-decoration: none;
-  color: rgba(0,0,0,0.5);
-  text-shadow: 1px 1px 0 rgba(255,255,255,0.5);
-}
-
-.download:hover {
-  color: rgba(0,0,0,0.75);
-  text-shadow: 1px 1px 0 rgba(255,255,255,0.5);
-}
-
-.download:focus {
-  bottom: 24px;
-}
 
 /*
 .gradient {
@@ -107,42 +83,19 @@ LOGIN FORM
 *******************/
 
 .login-form {
-  width: 300px;
-  margin: 0 auto;
+  width: 100%;
   position: relative;
-
-  background: #f3f3f3;
-  border: 1px solid #fff;
-  border-radius: 5px;
-
-  box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  background: #565d64;
+  display: inline-block;
+  border-top: 30%;
+  top: 100px;
 }
 
-/*******************
-HEADER
-*******************/
-
-.login-form .header {
-  padding: 40px 30px 30px 30px;
-}
-
-.login-form .header h1 {
-  font-family: 'Bree Serif', serif;
-  font-weight: 300;
-  font-size: 28px;
-  line-height:34px;
-  color: #414848;
-  text-shadow: 1px 1px 0 rgba(255,255,255,1.0);
-  margin-bottom: 10px;
-}
-
-.login-form .header span {
-  font-size: 11px;
-  line-height: 16px;
-  color: #678889;
-  text-shadow: 1px 1px 0 rgba(255,255,255,1.0);
+.login-form .title {
+  padding-top: 75px;
+  padding-left: 75px;
+  width: 40%;
+  float:left;
 }
 
 /*******************
@@ -151,13 +104,35 @@ CONTENT
 
 .login-form .content {
   padding: 0 30px 25px 30px;
+  float: right;
+  width: 40%;
+}
+
+.login-form .content .list-item{
+  padding: 0 30px 25px 30px;
+  list-style-type: none;
+  display: block;
+}
+
+.login-form .content .button-div{
+  position: relative;
+  left: 40px;
+}
+
+.login-form .content .button-div .button{
+  width: 307px;
+  padding: 15px 25px 20px 20px;
+  //margin: 10px;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 /* Input field */
-.login-form .content .input {
-  width: 188px;
-  padding: 15px 25px;
-
+.login-form .content .list-item .input {
+  width: 260px;
+  padding: 15px 25px 20px 20px;
+  margin: 10px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 400;
   font-size: 14px;
@@ -166,11 +141,7 @@ CONTENT
 
   background: #fff;
   border: 1px solid #fff;
-  border-radius: 5px;
 
-  box-shadow: inset 0 1px 3px rgba(0,0,0,0.50);
-  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.50);
-  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.50);
 }
 
 /* Second input field */
@@ -192,30 +163,6 @@ CONTENT
   -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
 }
 
-.user-icon, .pass-icon {
-  width: 46px;
-  height: 47px;
-  display: block;
-  position: absolute;
-  left: 0px;
-  padding-right: 2px;
-  z-index: -1;
-
-  -moz-border-radius-topleft: 5px;
-  -moz-border-radius-bottomleft: 5px;
-  -webkit-border-top-left-radius: 5px;
-  -webkit-border-bottom-left-radius: 5px;
-}
-
-.user-icon {
-  top:153px; /* Positioning fix for slide-in, got lazy to think up of simpler method. */
-  background: rgba(65,72,72,0.75) url(http://www.demo.amitjakhu.com/login-form/images/user-icon.png) no-repeat center;
-}
-
-.pass-icon {
-  top:201px;
-  background: rgba(65,72,72,0.75) url(http://www.demo.amitjakhu.com/login-form/images/pass-icon.png) no-repeat center;
-}
 
 .content input:focus + div{
   left: -46px;
@@ -228,88 +175,4 @@ CONTENT
   -webkit-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   -ms-transition: all 0.5s ease;
-}
-
-/*******************
-FOOTER
-*******************/
-
-.login-form .footer {
-  padding: 25px 30px 40px 30px;
-  overflow: auto;
-
-  background: #d4dedf;
-  border-top: 1px solid #fff;
-
-  box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
-  -moz-box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
-  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
-}
-
-/* Login button */
-.login-form .footer .button {
-  float:right;
-  padding: 11px 25px;
-
-  font-family: 'Bree Serif', serif;
-  font-weight: 300;
-  font-size: 18px;
-  color: #fff;
-  text-shadow: 0px 1px 0 rgba(0,0,0,0.25);
-
-  background: #56c2e1;
-  border: 1px solid #46b3d3;
-  border-radius: 5px;
-  cursor: pointer;
-
-  box-shadow: inset 0 0 2px rgba(255,255,255,0.75);
-  -moz-box-shadow: inset 0 0 2px rgba(255,255,255,0.75);
-  -webkit-box-shadow: inset 0 0 2px rgba(255,255,255,0.75);
-}
-
-.login-form .footer .button:hover {
-  background: #3f9db8;
-  border: 1px solid rgba(255,255,255,0.75);
-
-  box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
-  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
-  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.5);
-}
-
-.login-form .footer .button:focus {
-  position: relative;
-  bottom: -1px;
-
-  background: #56c2e1;
-
-  box-shadow: inset 0 1px 6px rgba(255,255,255,0.75);
-  -moz-box-shadow: inset 0 1px 6px rgba(255,255,255,0.75);
-  -webkit-box-shadow: inset 0 1px 6px rgba(255,255,255,0.75);
-}
-
-/* Register button */
-.login-form .footer .register {
-  display: block;
-  float: right;
-  padding: 10px;
-  margin-right: 20px;
-
-  background: none;
-  border: none;
-  cursor: pointer;
-
-  font-family: 'Bree Serif', serif;
-  font-weight: 300;
-  font-size: 18px;
-  color: #414848;
-  text-shadow: 0px 1px 0 rgba(255,255,255,0.5);
-}
-
-.login-form .footer .register:hover {
-  color: #3f9db8;
-}
-
-.login-form .footer .register:focus {
-  position: relative;
-  bottom: -1px;
 }
