--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,10 +3,9 @@
   <%= form_for @user do |f| %>
 
       <div class = "title">
-        <h1>Sign up</h1>
-        <span>
-        Fill out this form to register for an account
-        </span>
+        <h1 id="login-kelburn" >kelburn</h1>
+        <h1 id="login-postal" >postal</h1>
+        <h1 id="login-service" >service</h1>
       </div>
       <div class="content">
         <ul class="list-item">
