added companies form and new controller actions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
                 <a href="#">Mail</a>
             </li>
             <li>
-                <a href="#">Transport firms</a>
+              <%= link_to 'Transport firms', transport_firm_path %>
             </li>
             <li>
                 <a href="#">Connections</a>
