--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
                 <a href="#">Connections</a>
             </li>
             <li>
-                <a href="#">Pricing</a>
+                <%= link_to 'Pricing', prices_path %>
             </li>
             <li>
                 <a href="#">Business</a>
