Edit Connections working template

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
                 <a href="#">Transport firms</a>
             </li>
             <li>
-                <a href="#">Connections</a>
+                <a href="connection">Connections </a>
+                
             </li>
             <li>
                 <a href="#">Pricing</a>
