can now select companies and it will populate the form, currently update isn't implemented and delete works but will not redirect the page

--- a/app/views/companies/_companies_form.html.erb
+++ b/app/views/companies/_companies_form.html.erb
@@ -30,7 +30,10 @@
           <%= submit_tag "add" %>
         </fieldset>
       </div>
-
     </div>
    <!-- <button id="submit">add new connection</button> -->
 <%end%>
+
+<%= form_for(@company, :html => { :method => :delete, :remote => true }) do |f| %>
+    <%= submit_tag "delete" %>
+<% end %>
