--- a/app/views/companies/_companies_search.html.erb
+++ b/app/views/companies/_companies_search.html.erb
@@ -1,17 +1,13 @@
-
-
 <%= form_tag(@company, :method => "get", id: "search-form") do %>
     <%= text_field_tag :search, params[:search], placeholder: "Search" %>
     <%= submit_tag "Search" %>
 <% end %>
-<!-- change this to a list of buttons, which will populate
-the LHS and allow for it to be edited -->
+
 <% @companies.each do |c|%>
     <ul>
       <li>
-        <%= c[:company] %>
+        <%= link_to c.company, c %>
       </li>
     </ul>
 <% end %>
 
-<!-- for each company in companies add to table -->
