--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,4 +1,5 @@
 <div>
   <%= render(:partial => "companies_form",:controller=>"companies", :model=>@company) %>
   <%= render(:partial => "companies_search",:controller=>"companies", :model=>@company) %>
+  <%= paginate @companies %>
 </div>
