--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
         <%= link_to 'Kelburn Postal Service', homepage_path, class: "pure-menu-heading" %>
         <ul >
             <li>
-                <a href="#">Mail</a>
+                <%= link_to 'Mail', mail_path %>
             </li>
             <li>
                 <a href="#">Transport firms</a>
