added delete for connections

--- a/app/views/companies/_connection_fields.html.erb
+++ b/app/views/companies/_connection_fields.html.erb
@@ -63,6 +63,11 @@
   <%= f.label :utilised, "Utilised" %>
   <br/>
   <%= f.check_box :utilised %>
+  <br />
+  <%= f.label :_destroy, "Delete" %>
+  <br />
+  <%= f.check_box :_destroy %>
   <br/>
+
 </fieldset>
 
