mail and other things

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= link_to 'Kelburn Postal Service', homepage_path, class: "pure-menu-heading" %>
     <ul >
       <li>
-        <a href="#">Mail</a>
+        <%= link_to 'Mail', mail_page_path %>
       </li>
       <li>
         <%= link_to 'Transport firms', companies_path %>
