--- a/app/views/prices/edit.html.erb
+++ b/app/views/prices/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing price</h1>
+<h1>Update Pricing</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @price %> |
 <%= link_to 'Back', prices_path %>
