--- a/app/views/prices/index.html.erb
+++ b/app/views/prices/index.html.erb
@@ -1,41 +1,48 @@
-<h1>Listing prices</h1>
+<h1>Customer Pricing</h1>
+
+
 
 <table>
-  <thead>
-    <tr>
-      <th>I air w cost</th>
-      <th>I air v cost</th>
-      <th>I land w cost</th>
-      <th>I land v cost</th>
-      <th>D air w cost</th>
-      <th>D air v cost</th>
-      <th>D land w cost</th>
-      <th>D land v cost</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @prices.each do |price| %>
-      <tr>
-        <td><%= price.i_air_w_cost %></td>
-        <td><%= price.i_air_v_cost %></td>
-        <td><%= price.i_land_w_cost %></td>
-        <td><%= price.i_land_v_cost %></td>
-        <td><%= price.d_air_w_cost %></td>
-        <td><%= price.d_air_v_cost %></td>
-        <td><%= price.d_land_w_cost %></td>
-        <td><%= price.d_land_v_cost %></td>
-        <td><%= link_to 'Show', price %></td>
-        <td><%= link_to 'Edit', edit_price_path(price) %></td>
-        <td><%= link_to 'Destroy', price, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+   <th>International</th>
+  <tr>
+      <td>Air Priority - Weight Cost</td>
+      <td><%= @prices.i_air_w_cost %></td>
+  </tr>
+  <tr>
+      <td>Air Priority - Volume Cost</td>
+      <td><%= @prices.i_air_v_cost %></td>
+  </tr>
+  <tr>
+      <td>Land Priority - Weight Cost</td>
+      <td><%= @prices.i_land_w_cost %></td>
+  </tr>
+  <tr>
+      <td>Land Priority - Volume Cost</td>
+      <td><%= @prices.i_land_v_cost %></td>
+  </tr>
 </table>
 
-<br>
+<table>
+    <th>Domestic</th>
+    <tr>
+      <td>Air Priority - Weight Cost</td>
+      <td><%= @prices.d_air_w_cost %></td>
+    </tr>
+    <tr>
+      <td>Air Priority - Volume Cost</td>
+      <td><%= @prices.d_air_v_cost %></td>
+    </tr>
+    <tr>
+      <td>Land Priority - Weight Cost</td>
+      <td><%= @prices.d_land_w_cost %></td>
+    </tr>
+    <tr>
+      <td>Land Priority - Volume Cost</td>
+      <td><%= @prices.d_land_v_cost %></td>
+    </tr>
+      <td><%= link_to 'Update Pricing', edit_price_path(@prices) %></td>
+    </tr> 
+</table>
+<br />
 
 <%= link_to 'New Price', new_price_path %>
