--- a/app/views/prices/index.html.erb
+++ b/app/views/prices/index.html.erb
@@ -5,7 +5,7 @@
   <table>
      <th>International</th>
     <tr>
-        <td>Air Priority - $ Per Kilogram/td>
+        <td>Air Priority - $ Per Kilogram</td>
         <td><%= @prices.i_air_w_cost %></td>
     </tr>
     <tr>
