Added frontend stuff for the companies page. Still a work in prgress

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New company</h1>
+<div class="companies-card">
+	<h1>New company</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', companies_path %>
+	<%= link_to 'Back', companies_path %>
+</div>
