--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,15 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class="companies-card"> 
+	<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Company name:</strong>
-  <%= @company.company_name %>
-</p>
+	<p>
+  	<strong>Company name:</strong>
+  	<%= @company.company_name %>
+	</p>
 
-<ol>
-  <% @company.connections.each do |conn| %>
-  <li><%= conn %></li>
-  <% end %>
-</ol>
+	<ol>
+  	<% @company.connections.each do |conn| %>
+  	<li><%= conn %></li>
+  	<% end %>
+	</ol>
 
-<%= link_to 'Edit', edit_company_path(@company) %> |
-<%= link_to 'Back', companies_path %>
+	<%= link_to 'Edit', edit_company_path(@company) %> |
+	<%= link_to 'Back', companies_path %>
+</div>
