--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,7 @@
         <%= link_to 'Mail', mail_page_path %>
       </li>
       <li>
-        <%= link_to 'Transport firms', companies_path %>
-      </li>
-      <li>
-        <a href="#">Connections</a>
+        <%= link_to 'Companies + Routes', companies_path %>
       </li>
       <li>
         <%= link_to 'Pricing', prices_path %>
