--- a/app/assets/stylesheets/companies.css.scss
+++ b/app/assets/stylesheets/companies.css.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the Companies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.companies-card {
+	background-color: #fff;
+	margin: 5% 10% 5% 10%;
+	padding: 25px;
+	border: solid;
+	border-color: #CCC;
+	border-width: 0px 0px 2px 0px;
+}
+
+.companies-card h1 {
+	text-transform: uppercase;
+	font-weight: 400;
+	font-style: italic;
+	border: solid;
+	border-color: #DEDEDE;
+	border-width: 0px 0px 2px 0px;
+	padding: 0px 0px 10px 10px;
+	margin: 0px 0px 10px 0px;
+}
+
+.companies-card table {
+	margin: 0px 10px 0px 10px;
+}
+
+.companies-card th {
+	text-transform: uppercase;
+	font-weight: 400;
+	padding: 5px 0px 15px 0px;
+}
+
+.companies-card td {
+	padding-bottom: 10px;
+	font-weight: 300;
+}
+
+.companies-card .companies-button {
+	padding: 0px 0px 0px 10px;
+}
