--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing company</h1>
+<div class="companies-card">
+	<h1>Editing company</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @company %> |
-<%= link_to 'Back', companies_path %>
+	<%= link_to 'Show', @company %> |
+	<%= link_to 'Back', companies_path %>
+</div>
