--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,27 +1,32 @@
-<h1>Listing companies</h1>
+<div class="companies-card" >
+  <h1>transport companies</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @companies.each do |company| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= company.company_name %></td>
-        <td><%= link_to 'Show', company %></td>
-        <td><%= link_to 'Edit', edit_company_path(company) %></td>
-        <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Company name</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @companies.each do |company| %>
+        <tr>
+          <td><%= company.company_name %></td>
+          <td class="companies-button"><%= link_to 'View', company %></td>
+          <td class="companies-button"><%= link_to 'Edit', edit_company_path(company) %></td>
+          <td class="companies-button"><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td class="companies-button"><%= link_to '+ Add Company', new_company_path %></td>
+      </tr>
+    </tfoot>
+  </table>
 
-<%= link_to 'New Company', new_company_path %>
+  <br>
+
+  
+
+</div>
