Added initial business view stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <%= link_to 'Pricing', prices_path %>
       </li>
       <li>
-        <a href="#">Business</a>
+        <%= link_to 'Business', business_path %>
       </li>
     </ul>
     <ul id="menu-user-links">
