--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,43 +6,20 @@
 <title>KPS Homepage</title>
 </HEAD>
 <BODY BGCOLOR="WHITE">
-<CENTER>
+
 <H1>Working dashboard</H1>
-   
+<table>   
+  <td width="80%">
+<h3>Search</h3>   
 <form action='/search'>
 <input name="query" type="text" />
 <input type='submit' value='Search' />
 </form>
-
-<h1>Listing companies</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @company.each do |company| %>
-      <tr>
-        <td><%= company.company_name %></td>
-        <td><%= link_to 'Show', company %></td>
-        <td><%= link_to 'Edit', edit_company_path(company) %></td>
-        <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+</td>
+<td>
+<h3>Notifications</h3>
+</td>
 </table>
-
-<br>
-
-<%= link_to 'New Company', new_company_path %>
-
-</CENTER>
 
 </body>
 </html>
