--- a/app/views/companies/_connection_fields.html.erb
+++ b/app/views/companies/_connection_fields.html.erb
@@ -1,4 +1,4 @@
-<fieldset>
+<fieldset class="connections-form">
   <%= f.label :location_one, "Location One" %>
   <br/>
   <% if f.object.new_record? %>
@@ -70,4 +70,3 @@
   <br/>
 
 </fieldset>
-
