--- a/app/views/mail/_form.html.erb
+++ b/app/views/mail/_form.html.erb
@@ -4,37 +4,33 @@
       <h2><%= pluralize(@mail.errors.count, "error") %> prohibited this mail from being saved:</h2>
 
       <ul>
-        <% @mail.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
+      <% @mail.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
       </ul>
     </div>
-    <% end %>
+  <% end %>
 
     <div class="field">
       <%= f.label :sender %><br>
-      <%= f.text_field :sender %>
+      <%= f.text_field :sender , required: true, placeholder:'Senders Name' %>
     </div>
     <div class="field">
       <%= f.label :receiver %><br>
-      <%= f.text_field :receiver %>
+      <%= f.text_field :receiver , required: true%>
     </div>
     <div class="field">
       <%= f.label :to %><br>
-      <%= f.collection_select :to, Location.all, :name, :name, :include_blank => 'Select the start point' %>
+      <%= f.collection_select :to, Location.all, :name, :name, :include_blank => 'Select the start point' , required: true %>
     </div>
     <div class="field">
       <%= f.label :from %><br>
-    <%= f.collection_select :from, Location.all, :name, :name, :include_blank => 'Select the end point' %>
+    <%= f.collection_select :from, Location.all, :name, :name, :include_blank => 'Select the end point' , required: true %>
   </div>
     <%= f.label :international, "International" %>
     <br/>
     <%= f.check_box :international %>
     <br />
-  <div class="field">
-    <%= f.label :day %><br>
-    <%= f.text_field :day %>
-  </div>
   <div class="field">
     <%= f.label :weight %><br>
     <%= f.text_field :weight %>
@@ -45,21 +41,21 @@
   </div>
   <div class="field">
     <%= f.label :priority %><br>
-    <%= f.text_field :priority %>
+   <%= f.select :priority, [['Air', 1], ['Land', 2]], :include_blank => 'Transport', required: true %>
   </div>
   <div class="field">
     <%= f.label :send_date %><br>
-    <%= f.date_select :send_date %>
+    <%= f.date_select :send_date, required: true %>
   </div>
     <% if !@mail.new_record? %>
   <div class="field">
     <%= f.label :receive_date %><br>
-    <%= f.date_select :receive_date %>
+    <%= f.date_select :receive_date , required: true%>
   </div>
         <% end %>
   <div class="field">
-    <%= f.label :max_delivery_time %><br>
-    <%= f.date_select :max_delivery_time %>
+    <%= f.label :max_delivery_date  %><br>
+    <%= f.date_select :max_delivery_date , required: true%>
   </div>
   <div class="field">
     <%= f.label :cost %><br>
