--- a/app/views/mail/show.html.erb
+++ b/app/views/mail/show.html.erb
@@ -11,11 +11,6 @@
 </p>
 
 <p>
-  <strong>Day:</strong>
-  <%= @mail.day %>
-</p>
-
-<p>
   <strong>Weight:</strong>
   <%= @mail.weight %>
 </p>
@@ -42,7 +37,7 @@
 
 <p>
   <strong>Max delivery time:</strong>
-  <%= @mail.max_delivery_time %>
+  <%= @mail.max_delivery_date %>
 </p>
 
 <p>
