--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -41,7 +41,8 @@ LOGIN FORM
 .login-form {
   width: 100%;
   position: relative;
-  background: #137532;
+  background-image: url("/assets/map-background.jpg"); /* Old browsers */
+  background-position: center;
   display: inline-block;
   margin-top: 20%;
 }
