--- a/app/views/mail/index.html.erb
+++ b/app/views/mail/index.html.erb
@@ -1,3 +1,4 @@
+<div class="mail-card" >
 <h1>Listing mail</h1>
 
 <table>
@@ -43,3 +44,5 @@
 <br>
 
 <%= link_to 'New Mail', new_mail_path %>
+
+</div>
