--- a/app/views/mail/new.html.erb
+++ b/app/views/mail/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New mail</h1>
+<div class="mail-card" >
+	<h1>New mail</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', mail_index_path %>
+	<%= link_to 'Back', mail_index_path %>
+</div>
