--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -107,8 +107,7 @@ CONTENT
   font-size: 20px;
   color: #fff;
   text-transform: uppercase;
-  background-color: #078F3B; 
-  border: 1px solid #056329;
+  background-color: rgba(0, 0, 0, 0.45); 
 }
 
 /* Input field */
@@ -120,8 +119,8 @@ CONTENT
   font-size: 15px;
   color: #9e9e9e;
   font-style: italic;
+  background-color: rgba(255, 255, 255, 0.45); 
   text-shadow: 1px 1px 0 rgba(255,255,255,1.0);
-  border: 1px solid #056329;
 
 }
 
