--- a/app/views/prices/index.html.erb
+++ b/app/views/prices/index.html.erb
@@ -1,3 +1,4 @@
+<div class="pricing-card">
 <h1>Customer Pricing</h1>
 
 
@@ -44,4 +45,4 @@
 <!-- If we have a prices model then show edit priciing otherwise show a new price-->
 <%= link_to 'Manage Pricing', new_or_edit_price_path(@prices) %>
 
-
+</div>
