--- a/app/assets/stylesheets/mail.css.scss
+++ b/app/assets/stylesheets/mail.css.scss
@@ -32,3 +32,28 @@
 	font-weight: 400;
 	padding: 5px 5px 15px 0px;
 }
+
+.mail-card .companies-button {
+	padding: 0px 0px 0px 10px;
+}
+
+.mail-form form label {
+	text-transform: uppercase;
+	width: 150px;
+	float: left;
+	text-align: right;
+	margin-right:  3em;
+	display: inline-block;
+	padding: 10px 0 0;
+}
+
+.mail-card form input[type='text'] {
+  width: 300px;
+  padding: 6px 0px 6px 5px;
+  margin: 0px 0px 0px 0px;
+  font-weight: 300;
+  font-size: 15px;
+  font-style: italic;
+  text-shadow: 1px 1px 0 rgba(255,255,255,1.0);
+  border: 1px solid #DEDEDE;
+}
