--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,25 +1,20 @@
-<!DOCTYPE html>
-<html>
+<div class="home-card">
 
-<head>
+<h1>dashboard</h1>
 
-<title>KPS Homepage</title>
-</HEAD>
-<BODY BGCOLOR="WHITE">
-
-<H1>Working dashboard</H1>
 <table>   
-  <td width="80%">
-<h3>Search</h3>   
-<form action='/search'>
-<input name="query" type="text" />
-<input type='submit' value='Search' />
-</form>
-</td>
-<td>
-<h3>Notifications</h3>
-</td>
+  <td>
+	<h3>Search</h3>   
+	
+	<form action='/search'>
+		<input name="query" type="text" />
+		<input type='submit' value='Search' />
+	</form>
+  </td>
+  <td>
+	<h3>Notifications</h3>
+  </td>
+
 </table>
 
-</body>
-</html>
+</div>
