--- a/app/views/companies/_connection_fields.html.erb
+++ b/app/views/companies/_connection_fields.html.erb
@@ -10,7 +10,7 @@
           <br/>
       <% end %>
   <% else %>
-      <% if :location_one_drop_down.nil? %>
+      <% if f.object.location_one_drop_down.blank? %>
           <%= f.text_field :location_one, :readonly => true %>
       <% else %>
           <%= f.text_field :location_one_drop_down, :readonly => true %>
@@ -29,7 +29,7 @@
           <br/>
       <% end %>
   <% else %>
-      <% if :location_two_drop_down.nil? %>
+      <%  if f.object.location_two_drop_down.blank? %>
           <%= f.text_field :location_two, :readonly => true %>
       <% else %>
           <%= f.text_field :location_two_drop_down, :readonly => true %>
