Added to the event mode - Now stores a formatted time as a string - this is easier and dates and really expensive to deal will - Histories table will now be populated somewhat correctly (still doesn't work for locations or connections) but other events will generate histories in the history table with descriptions, a relevant event id and the date string.

--- a/app/views/prices/_form.html.erb
+++ b/app/views/prices/_form.html.erb
@@ -17,50 +17,50 @@
     <tr>
       <td>
         <%= f.label "Air Weight Cost" %>
-        <%= f.text_field :i_air_w_cost %>
+        <%= f.text_field :i_air_w_cost , required: true %>
       </td>
     </tr>
     <tr>
       <td>
         <%= f.label "Air Volume Cost" %>
-        <%= f.text_field :i_air_v_cost %>
+        <%= f.text_field :i_air_v_cost , required: true%>
       </td>
     </tr>
     <tr>
       <td>
         <%= f.label "Land Weight Cost" %>
-        <%= f.text_field :i_land_w_cost %>
+        <%= f.text_field :i_land_w_cost , required: true%>
       </td>
     </tr>
     <tr>
       <td>
         <%= f.label "Land Volume Cost" %>
-        <%= f.text_field :i_land_v_cost %>
+        <%= f.text_field :i_land_v_cost , required: true%>
       </td>
     </tr>
     <th>Domestic</th>
     <tr>
       <td>
         <%= f.label "Air Weight Cost" %>
-        <%= f.text_field :d_air_w_cost %>
+        <%= f.text_field :d_air_w_cost , required: true%>
       </td>
     </tr>
     <tr>
       <td>
         <%= f.label "Air Volume Cost" %>
-        <%= f.text_field :d_air_v_cost %>
+        <%= f.text_field :d_air_v_cost , required: true%>
       </td>
     </tr>
     <tr>
       <td>
         <%= f.label "Land Weight Cost" %>
-        <%= f.text_field :d_land_w_cost %>
+        <%= f.text_field :d_land_w_cost, required: true %>
       </td>
     </tr>
     <tr>
       <td>
         <%= f.label "Land Volume Cost" %>
-        <%= f.text_field :d_land_v_cost %>
+        <%= f.text_field :d_land_v_cost, required: true %>
       </td>
     </tr>
   </table>
