Added a cheeky workaround for if the lightbox doesn't work.

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -40,6 +40,7 @@
       <button id="submit_form">submit</button>
     </div>
   </div>
+  <%= f.submit %>
 <% end %>
 
 <script type="text/javascript">
