--- a/app/assets/stylesheets/mail.css.scss
+++ b/app/assets/stylesheets/mail.css.scss
@@ -27,10 +27,28 @@
 	width: 100%;
 }
 
+.mail-card thead {
+	border: solid;
+	border-color: #DEDEDE;
+	border-width: 0px 0px 2px 0px;
+}
+
 .mail-card th {
 	text-transform: uppercase;
 	font-weight: 400;
-	padding: 5px 5px 15px 0px;
+	padding: 5px 5px 10px 0px;
+	text-align: center;
+}
+
+.mail-card td {
+	font-size: 14px;
+	font-weight: 300;
+	padding: 5px 10px 5px 10px;
+	text-align: center;
+}
+
+.shaded {
+	background-color: #EEEEEE;
 }
 
 .mail-card .companies-button {
