--- a/app/views/mail/index.html.erb
+++ b/app/views/mail/index.html.erb
@@ -4,34 +4,24 @@
 <table>
   <thead>
     <tr>
-      <th>To</th>
-      <th>From</th>
-      <th>Weight</th>
-      <th>Volume</th>
+      <th>destination</th>
+      <th>origin</th>
       <th>Priority</th>
-      <th>Send date</th>
-      <th>Receive date</th>
-      <th>Max delivery time</th>
+      <th>Sent</th>
+      <th>Received</th>
       <th>Cost</th>
       <th>Current location</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
   </thead>
 
   <tbody>
     <% @mail.each do |mail| %>
       <tr>
         <td><%= mail.to %></td>
-        <td><%= mail.from %></td>
-        <td><%= mail.weight %></td>
-        <td><%= mail.volume %></td>
+        <td class="shaded"><%= mail.from %></td>
         <td><%= mail.priority %></td>
-        <td><%= mail.send_date %></td>
+        <td class="shaded"><%= mail.send_date %></td>
         <td><%= mail.receive_date %></td>
-        <td><%= mail.max_delivery_date %></td>
-        <td><%= mail.cost %></td>
+        <td class="shaded"><%= mail.cost %></td>
         <td><%= mail.current_location %></td>
         <td><%= link_to 'View', mail %>
             <%= link_to 'Edit', edit_mail_path(mail) %>
