--- a/app/views/prices/edit.html.erb
+++ b/app/views/prices/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Update Pricing</h1>
+<div class="pricing-card" >
+	<h1>Update Pricing</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', prices_path %>
+	<%= link_to 'Back', prices_path %>
+</div>
