Added displaying of the history

--- a/app/views/business/_logfile.html.erb
+++ b/app/views/business/_logfile.html.erb
@@ -1,17 +1,19 @@
-<table>
-  <thead>
-    <tr>
-      <th>Event Type</th>
-      <th>Time</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
+<div>
+  <table>
+    <thead>
       <tr>
-        <td class="events-button"><%= link_to 'Event', event.id %></td>
-        <td><%= event.created_at %></td>
+        <th>Event Details</th>
+        <th>Time</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @events.each do |event| %>
+        <tr>
+          <td><%= event.event_details %></td>
+          <td><%= event.event_time %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
