--- a/app/views/mail/_form.html.erb
+++ b/app/views/mail/_form.html.erb
@@ -54,8 +54,8 @@
   </div>
         <% end %>
   <div class="field">
-    <%= f.label :max_delivery_date  %><br>
-    <%= f.date_select :max_delivery_date , required: true%>
+    <%= f.label :max_delivery_time  %><br>
+    <%= f.date_select :max_delivery_time , required: true%>
   </div>
   <div class="field">
     <%= f.label :cost %><br>
