--- a/app/views/mail/index.html.erb
+++ b/app/views/mail/index.html.erb
@@ -30,7 +30,7 @@
         <td><%= mail.priority %></td>
         <td><%= mail.send_date %></td>
         <td><%= mail.receive_date %></td>
-        <td><%= mail.max_delivery_date %></td>
+        <td><%= mail.max_delivery_time %></td>
         <td><%= mail.cost %></td>
         <td><%= mail.current_location %></td>
         <td><%= link_to 'View', mail %>
