Added displaying of the history

--- a/app/views/business/_logfile.html.erb
+++ b/app/views/business/_logfile.html.erb
@@ -1,7 +1,8 @@
+<div>
 <table>
   <thead>
     <tr>
-      <th>Event Type</th>
+      <th>Event Details</th>
       <th>Time</th>
     </tr>
   </thead>
@@ -9,9 +10,10 @@
   <tbody>
     <% @events.each do |event| %>
       <tr>
-        <td class="events-button"><%= link_to 'Event', event.id %></td>
-        <td><%= event.created_at %></td>
+        <td><%= event.event_details %></td>
+        <td><%= event.event_time %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+</div>
