Made history events clickable - will display the details about the thing you clicked on.

--- a/app/views/business/_logfile.html.erb
+++ b/app/views/business/_logfile.html.erb
@@ -9,11 +9,15 @@
 
   <tbody>
     <% @events.each do |event| %>
-      <tr>
-        <td><%= event.event_details %></td>
-        <td><%= event.event_time %></td>
+      <tr >
+        <td class = "open_event" , id = "<%= event.id %>"><%= event.event_details %></td>
+        <td class = "open_event" , id = "<%= event.id %>"><%= event.event_time %></td>
       </tr>
+      <tr id = "id<%= event.id %>" , style = "display:none">
+        <td>fkdhjhgdfkghkhghkghfdhgk</td>
+      <tr>
     <% end %>
   </tbody>
 </table>
 </div>
+
