--- a/app/assets/stylesheets/companies.css.scss
+++ b/app/assets/stylesheets/companies.css.scss
@@ -23,55 +23,57 @@
 }
 
 .companies-card table {
-	margin: 0px 10px 0px 10px;
+	margin: 0px 10px 0px 0px;
+	padding: 10px 5px 10px 5px;
+	border-color: #CDCDCD;
+	border: solid;
+	border-width: 1px;
 }
 
 .companies-card th {
 	text-transform: uppercase;
 	font-weight: 400;
-	padding: 10px 0px 15px 0px;
+	padding: 5px 0px 15px 0px;
 }
 
+.companies-card td {
+	padding: 0px 0px 0px 100px;
+}
 
 .companies-card .companies-button {
 	padding: 0px 0px 0px 10px;
 }
 
+.company-name {
+	padding: 0px 0px 20px 26px;
+}
+
+.company-name label {
+	margin-right: 25px;
+}
 
 .companies-form form label {
 	text-transform: uppercase;
-	width: 150px;
-	float: left;
 	text-align: right;
-	margin-right:  3em;
 	display: inline-block;
-	padding: 10px 0 0;
 }
 
-.connections-form label {
-	text-transform: uppercase;
-	width: 150px;
-	float: left;
-	text-align: right;
-	margin-right:  3em;
-	margin-top: 15px;
-	display: inline-block;
+.connections-form td {
+	height: 45px;
+	vertical-align: middle;
+	padding: 0px 10px 0px 10px;
 }
 
 .companies-form form input[type='text'] {
-  width: 300px;
+  width: 250px;
   padding: 6px 0px 6px 5px;
   margin: 0px 0px 0px 0px;
   font-weight: 300;
   font-size: 15px;
   font-style: italic;
   text-shadow: 1px 1px 0 rgba(255,255,255,1.0);
-  border: 1px solid #056329;
+  border: 1px solid #CFCFCF;
 }
-
-/**  background: #dfe9ec;
-  color: #414848;
-}*/
 
 .companies-form form input[type='text']:focus {
   background: #dfe9ec;
@@ -82,3 +84,8 @@
   -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
 } 
 
+.companies-form button, input[type='submit'] {
+	padding: 5px 15px 5px 15px;
+	background-color: #CFCFCF;
+	text-transform: uppercase;
+}
