--- a/app/views/companies/_show.html.erb
+++ b/app/views/companies/_show.html.erb
@@ -10,6 +10,6 @@
   	<li><%= conn.location_one + " to " + conn.location_two %></li>
   	<% end %>
 	</ol>
-	<%= link_to 'Edit', edit_company_path(@company) %>
+	<%= link_to 'Edit', edit_company_path(company) %>
 </div>
 </div>
