--- a/app/assets/stylesheets/companies.css.scss
+++ b/app/assets/stylesheets/companies.css.scss
@@ -25,9 +25,14 @@
 .companies-card table {
 	margin: 0px 10px 0px 0px;
 	padding: 10px 5px 10px 5px;
-	border-color: #CDCDCD;
+}
+
+.connections-form table {
+	margin: 0px 10px 0px 0px;
+	padding: 10px 5px 10px 5px;
 	border: solid;
-	border-width: 1px;
+	border-color: #DEDEDE;
+	border-width: 1px 0px 0px 0px;
 }
 
 .companies-card th {
@@ -45,7 +50,7 @@
 }
 
 .company-name {
-	padding: 0px 0px 20px 26px;
+	padding: 0px 0px 10px 26px;
 }
 
 .company-name label {
@@ -84,8 +89,35 @@
   -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.25);
 } 
 
-.companies-form button, input[type='submit'] {
+.companies-form input[type='submit'] {
 	padding: 5px 15px 5px 15px;
-	background-color: #CFCFCF;
+	background-color: rgba(64, 102, 24, 0.8);
 	text-transform: uppercase;
+	color: #fff;
+	font-size: 15px;
+	font-weight: 400;
+	float: right;
+}
+
+.companies-form input[type='submit']:hover {
+	background-color: rgba(64, 102, 24, 0.7);
+}
+
+.grey-button {
+	margin: 10px 0px 0px 0px;
+}
+
+.grey-button a {
+	margin: 100px 0px 0px 0px;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #000;
+	background-color: #CDCDCD;
+	padding: 5px 15px 5px 15px;
+	font-size: 15px;
+	font-weight: 400;
+}
+
+.grey-button a:hover {
+	background-color: #EDEDED;
 }
